Add Virtual Threads documentation (Java 21+)
- Added comprehensive Virtual Threads section in 09-multithreading.md:
  - Platform vs Virtual threads comparison
  - Multiple creation methods (ofVirtual, startVirtualThread, factory)
  - ExecutorService with virtual threads
  - Practical HTTP client example
  - Structured Concurrency (preview feature)
  - When to use virtual threads (I/O vs CPU bound)
  - Best practices and comparison with traditional approaches

- Updated Java version history in 01-java-basics.md:
  - Added Java 15 (Text Blocks) and Java 16 (Records) entries
  - Added cross-references to detailed sections

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>